@@ -22,6 +22,20 @@ displays a short help message
 .TP
 \fB\-r\fR
 removes all resources from \fI~\fP\fB/.gv\fP that equal the default resources being shipped with GNU gv (ignoring whitespaces).
+.TP
+\fB\-n\fR
+switches to alternative navigation by adding resp. updating navigation resources
+to \fI~\fP\fB/.gv\fP, i. e. after each page switch (except if selected by the
+page number) the page is scrolled to top (if switching forward) resp. to the
+bottom (if switching backward).
+.TP
+\fB\-N\fR
+switches to standard navigation by adding resp. updating navigation resources 
+to \fI~\fP\fB/.gv\fP.
+.TP
+\fB\-s\fR
+removes navigation resources from \fI~\fP\fB/.gv\fP and therefore enables
+standard navigation.
 
 
 .SH BACKGROUND
